[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/block_highlight.png" type="Texture" id=1]
[ext_resource path="res://scripts/KickObject.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="KickableArea" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="KickableCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="KickHighlight" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 1 )

[node name="KickObject" type="Node" parent="."]

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_HitArea_area_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_HitArea_body_exited"]
